Button wrap fix
Text within the buttons on the program pages no longer extend outside of
their bounds.

--- a/_sass/pages/program/awards/_index.scss
+++ b/_sass/pages/program/awards/_index.scss
@@ -4,6 +4,9 @@
 .page-content {
   .awards {
     .row {
+	  .btn {
+	    white-space:normal;
+	  }
       .dsa, .camping, .JoshSain, .nsa, .nsg {
         text-align: center;
 
